--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,73 +9,96 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:text="QUẢN LÝ SINH VIÊN"
-
-            android:textSize="24sp" />
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="right"
+        android:layout_marginTop="10dp"
             android:layout_margin="5dp"
-            android:layout_weight="3"
-            android:src="@drawable/_1" />
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:src="@drawable/anh1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+
+            android:text="QUẢN LÝ SẢN PHẨM"
+
+            android:textSize="24sp" />
+
     </LinearLayout>
 
-    <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="MSV"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/editTextMsv"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:hint="MSV" />
+        android:layout_marginTop="10dp">
 
-    <TextView
+        <TextView
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="Họ tên"
-        android:textSize="20sp" />
+            android:layout_width="98dp"
+            android:layout_height="49dp"
+            android:layout_gravity="center"
+            android:text="Tên SP"
+            android:gravity="center"
+            android:textSize="20dp" />
 
-    <EditText
-        android:id="@+id/editTextHoTen"
+        <EditText
+            android:id="@+id/edtSP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:hint="Nhập tên SP" />
+
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:hint="Họ tên" />
+        android:layout_marginTop="5dp">
 
+        <TextView
+
+            android:layout_width="98dp"
+            android:layout_height="49dp"
+            android:layout_gravity="center"
+            android:text="Số Lượng"
+            android:gravity="center"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/edtSoLuong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:hint="Nhập số lượng" />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
 
         <Button
-            android:id="@+id/buttonTaoEmail"
+            android:id="@+id/buttonThemSP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:text="Tạo email" />
+            android:text="Thêm" />
 
         <Button
             android:id="@+id/buttonXem"
@@ -86,11 +109,19 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/showEmailCreate"
+
+        android:id="@+id/showSP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Email là:"
+        android:layout_marginTop="10dp"
+        android:text="Tên SP vừa nhập :"
+        android:textSize="20dp" />
+    <TextView
+        android:id="@+id/showSL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Số Lượng:"
         android:textSize="20dp" />
 
 
