--- a/app/src/main/res/layout/sp_info_item.xml
+++ b/app/src/main/res/layout/sp_info_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/imageView"
             android:layout_width="110dp"
             android:layout_height="match_parent"
-            android:src="@drawable/std" />
+            android:src="@drawable/anh1" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +30,7 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/nameStudent"
+                android:id="@+id/stt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -38,7 +38,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/idStudent"
+                android:id="@+id/Ten"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -46,7 +46,7 @@
                 android:textSize="15dp" />
 
             <TextView
-                android:id="@+id/emailStudent"
+                android:id="@+id/SoLuong"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
